site/content/en/v1.9/tasks/operations/gateway-namespace-mode.md
---
title: "Gateway Namespace Mode"
---

## Overview

In standard deployment mode, Envoy Gateway creates all data plane resources in the controller namespace (typically `envoy-gateway-system`).

The motivation behind this was to operate with minimum permissions needed to be given for Envoy Gateway controller, as the control plane and data plane was deployed in the same namespace.

Gateway Namespace Mode changes this behavior by placing Envoy Proxy data plane resources like Deployments, Services and ServiceAccounts in each Gateway's namespace, which provides stronger isolation and multi-tenancy compared to the Controller Namespace mode, as it isolates Envoy proxy data plane across different tenants.
This distributed architecture requires additional RBAC permissions for the Envoy Gateway controller to manage Kubernetes resources across multiple namespaces.

The default (Controller Namespace) deployment mode uses mTLS where both the client and server authenticate each other. However, in Gateway Namespace Mode, we've shifted to server-side TLS and JWT token validation between infra and control-plane.

* **Envoy proxy pods** (running in Gateway namespaces) act as clients and authenticate using JWT tokens
* **Envoy Gateway controller pod** (running in controller namespace) acts as the server and validates JWT tokens
* Only the CA certificate is available in pods running in Gateway namespaces
* Client certificates are not mounted in these namespaces
* The Envoy proxy still validates server certificates using the CA certificate

Gateway Namespace Mode uses projected service account JWT tokens for authentication.
* Use short-lived, audience-specific JWT tokens. These tokens are automatically mounted into pods via the projected volume mechanism
* JWT validation ensures that only authorized proxies can connect to the xDS server

{{% alert title="Note" color="warning" %}}

Currently it is not supported to run Gateway Namespace Mode with Merged Gateways deployments.

{{% /alert %}}

## Configuration

To enable Gateway Namespace Mode, configure the `provider.kubernetes.deploy.type` field in your Envoy Gateway Helm chart values:

```yaml
config:
  envoyGateway:
    provider:
      type: Kubernetes
      kubernetes:
        deploy:
          type: GatewayNamespace
```

You can also use this command to install Envoy Gateway with Gateway Namespace Mode using Helm:

```shell
helm install \
  --set config.envoyGateway.provider.kubernetes.deploy.type=GatewayNamespace \
  eg oci://docker.io/envoyproxy/gateway-helm \
  --version {{< helm-version >}} -n envoy-gateway-system --create-namespace
```

### RBAC configuration

When using Gateway Namespace Mode, Envoy Gateway needs additional RBAC permissions to create and manage resources across different namespaces. The following RBAC resources are automatically created when installing Envoy Gateway Helm Chart with Gateway Namespace Mode enabled.

```yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: gateway-helm-cluster-infra-manager
rules:
- apiGroups: [""]
  resources: ["serviceaccounts", "services", "configmaps"]
  verbs: ["create", "get", "delete", "deletecollection", "patch"]
- apiGroups: ["apps"]
  resources: ["deployments", "daemonsets"]
  verbs: ["create", "get", "delete", "deletecollection", "patch"]
- apiGroups: ["autoscaling", "policy"]
  resources: ["horizontalpodautoscalers", "poddisruptionbudgets"]
  verbs: ["create", "get", "delete", "deletecollection", "patch"]
- apiGroups: ["authentication.k8s.io"]
  resources: ["tokenreviews"]
  verbs: ["create"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: gateway-helm-cluster-infra-manager
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: 'gateway-helm-cluster-infra-manager'
subjects:
- kind: ServiceAccount
  name: 'envoy-gateway'
  namespace: 'envoy-gateway-system'
```

### Watch Mode Configuration

Envoy Gateway also supports configuration to watch resources only in specific namespaces by using:
- `EnvoyGateway.provider.kubernetes.watch.namespaces` - An explicit list of namespace names
- `EnvoyGateway.provider.kubernetes.watch.namespaceSelector` - A label selector for dynamic namespace selection

The namespace where Envoy Gateway runs is always included in addition to the configured watched namespaces. Envoy Gateway uses this namespace for its own managed infrastructure resources, such as Envoy data plane Services and Deployments.

#### Using Explicit Namespace List

When you specify an explicit namespace list with Gateway Namespace Mode, Envoy Gateway will:
- Watch for Gateway API resources in the specified namespaces
- Also include the Envoy Gateway controller namespace for managed infrastructure resources
- Create namespace-scoped Roles for infrastructure management in each specified namespace

Example configuration:
```yaml
envoyGateway:
  provider:
    type: Kubernetes
    kubernetes:
      deploy:
        type: GatewayNamespace
      watch:
        type: Namespaces
        namespaces:
          - team-a
          - team-b
```

#### Using Namespace Selector

When you use a namespace selector with Gateway Namespace Mode, Envoy Gateway will:
- Watch for Gateway API resources in all namespaces matching the label selector
- Also include the Envoy Gateway controller namespace for managed infrastructure resources
- Use a ClusterRole for infrastructure management (since target namespaces are determined dynamically at runtime)

Example configuration:
```yaml
envoyGateway:
  provider:
    type: Kubernetes
    kubernetes:
      deploy:
        type: GatewayNamespace
      watch:
        type: NamespaceSelector
        namespaceSelector:
          matchLabels:
            gateway: enabled
```

**Note:** When using `NamespaceSelector`, the ClusterRole for infrastructure management is automatically created by the Helm chart, providing permissions across all namespaces that match the selector.

## Testing

The following example demonstrates deploying two Gateways in different namespaces `team-a` and `team-b`.

### Create test namespaces

```shell
kubectl create namespace team-a
kubectl create namespace team-b
```

### Deploy Gateway Namespace Mode Example

Deploy resources on your cluster from the example, it will create two sets of backend deployments, Gateways and their respective HTTPRoutes in the previously created namespaces `team-a` and `team-b`.

```shell
kubectl apply -f https://raw.githubusercontent.com/envoyproxy/gateway/{{< yaml-version >}}/examples/kubernetes/gateway-namespace-mode.yaml
```

Verify that Gateways are deployed and programmed

```shell
kubectl get gateways -n team-a

NAME        CLASS   ADDRESS        PROGRAMMED   AGE
gateway-a   eg      172.18.0.200   True         67s
```

```shell
kubectl get gateways -n team-b

NAME        CLASS   ADDRESS        PROGRAMMED   AGE
gateway-b   eg      172.18.0.201   True         67s
```

Verify that HTTPRoutes are deployed

```shell
kubectl get httproute -n team-a

NAME           HOSTNAMES            AGE
team-a-route   ["www.team-a.com"]   67s
```

```shell
kubectl get httproute -n team-b

NAME           HOSTNAMES            AGE
team-b-route   ["www.team-b.com"]   67s
```

Envoy Proxy resources should be created now in the namespace of every Gateway.

```shell
kubectl get pods -n team-a

NAME                                              READY   STATUS    RESTARTS   AGE
envoy-team-a-gateway-a-b65c6264-d56f5d989-6dv5s   2/2     Running   0          65s
team-a-backend-6f786fb76f-nx26p                   1/1     Running   0          65s
```

```shell
kubectl get pods -n team-b

NAME                                               READY   STATUS    RESTARTS   AGE
envoy-team-b-gateway-b-0ac91f5a-74f445884f-95pl8   2/2     Running   0          87s
team-b-backend-966b5f47c-zxngl                     1/1     Running   0          87s
```

```shell
kubectl get services -n team-a

NAME                              TYPE           CLUSTER-IP      EXTERNAL-IP    PORT(S)          AGE
envoy-team-a-gateway-a-b65c6264   LoadBalancer   10.96.191.198   172.18.0.200   8080:30999/TCP   3m2s
team-a-backend                    ClusterIP      10.96.92.226    <none>         3000/TCP         3m2s
```

```shell
kubectl get services -n team-b

NAME                              TYPE           CLUSTER-IP     EXTERNAL-IP    PORT(S)          AGE
envoy-team-b-gateway-b-0ac91f5a   LoadBalancer   10.96.144.13   172.18.0.201   8081:31683/TCP   3m43s
team-b-backend                    ClusterIP      10.96.26.162   <none>         3000/TCP         3m43s
```

### Testing the Configuration

Fetch external IPs of the services:

```shell
export GATEWAY_HOST_A=$(kubectl get gateway/gateway-a -n team-a -o jsonpath='{.status.addresses[0].value}')
```

```shell
export GATEWAY_HOST_B=$(kubectl get gateway/gateway-b -n team-b -o jsonpath='{.status.addresses[0].value}')
```

Curl the route team-a-route through Envoy proxy:

```shell
curl --header "Host: www.team-a.com" http://$GATEWAY_HOST_A:8080/example
```

```shell
{
 "path": "/example",
 "host": "www.team-a.com",
 "method": "GET",
 "proto": "HTTP/1.1",
 "headers": {
  "Accept": [
   "*/*"
  ],
  "User-Agent": [
   "curl/8.7.1"
  ],
  "X-Envoy-External-Address": [
   "172.18.0.3"
  ],
  "X-Forwarded-For": [
   "172.18.0.3"
  ],
  "X-Forwarded-Proto": [
   "http"
  ],
  "X-Request-Id": [
   "52f08a5c-7e07-43b7-bd23-44693c60fc0c"
  ]
 },
 "namespace": "team-a",
 "ingress": "",
 "service": "",
 "pod": "team-a-backend-6f786fb76f-nx26p"
```

Curl the route team-b-route through Envoy proxy:

```shell
curl --header "Host: www.team-b.com" http://$GATEWAY_HOST_B:8081/example
```

```shell
{
 "path": "/example",
 "host": "www.team-b.com",
 "method": "GET",
 "proto": "HTTP/1.1",
 "headers": {
  "Accept": [
   "*/*"
  ],
  "User-Agent": [
   "curl/8.7.1"
  ],
  "X-Envoy-External-Address": [
   "172.18.0.3"
  ],
  "X-Forwarded-For": [
   "172.18.0.3"
  ],
  "X-Forwarded-Proto": [
   "http"
  ],
  "X-Request-Id": [
   "62a06bd7-4754-475b-854a-dca3fc159e93"
  ]
 },
 "namespace": "team-b",
 "ingress": "",
 "service": "",
 "pod": "team-b-backend-966b5f47c-d6jwj"
```
